# ros2craft_manager

./: .clang-format  CMakeLists.txt  README.md  needs.md  package.xml
config/: view.rviz
include/ros2craft_manager/: MCRobot.hpp  Manager.hpp  classForwards.h
launch/: octomap.launch.py  roscraft_server.launch.py
scripts/: main.cpp  main_manager copy.cpp  main_manager.cpp  transformer.cpp
src/: MCRobot.cpp  MCRobotV1.cpp  Manager.cpp
